feat: added mappers and updated project structure
Signed-off-by: TilemZiogas <ziogas.thlem@gmail.com>